--- a/index.html
+++ b/index.html
@@ -167,11 +167,45 @@
               <img
                 src="./images/imgS2-1.jpg"
                 alt="фотография Ольга Репина"
-                width="270" 
+                width="270"
                 class="info-img"
               />
               <h3 class="info-name">Ольга Репина</h3>
               <p class="info-profession">Frontend Developer</p>
+              <ul class="info-soc list">
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-twitter"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-instagram"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-facebook"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                    ></use>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="info-item">
               <img
@@ -182,6 +216,44 @@
               />
               <h3 class="info-name">Николай Тарасов</h3>
               <p class="info-profession">Marketing</p>
+              <ul class="info-soc list">
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/symbol-defs.svg#icon-icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20px" height="20px">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="info-item">
               <img
@@ -192,6 +264,40 @@
               />
               <h3 class="info-name">Михаил Ермаков</h3>
               <p class="info-profession">UI Designer</p>
+              <ul class="info-soc list">
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-twitter"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-instagram"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-facebook"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                    ></use>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="info-item">
               <img
@@ -202,6 +308,40 @@
               />
               <h3 class="info-name">Игорь Демьяненко</h3>
               <p class="info-profession">Product Designer</p>
+              <ul class="info-soc list">
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-twitter"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-instagram"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-facebook"
+                    ></use>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20"></svg>
+                    <use
+                      href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                    ></use>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
