--- a/index.html
+++ b/index.html
@@ -175,34 +175,38 @@
               <ul class="info-soc list">
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-twitter"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-instagram"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-facebook"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-linkedin"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -311,34 +315,38 @@
               <ul class="info-soc list">
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-twitter"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-instagram"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-facebook"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20"></svg>
-                    <use
-                      href="./images/log-icon-svg.svg#icon-icon-linkedin"
-                    ></use>
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                      ></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
