--- a/index.html
+++ b/index.html
@@ -165,14 +165,23 @@
           <ul class="info-list list">
             <li class="info-item">
               <img
-                src="./images/imgS2-1.jpg"
-                alt="фотография Ольга Репина"
+                src="./images/imgS1-1.jpg"
+                alt="фотографія Ігор Дем'яненко"
                 width="270"
                 class="info-img"
               />
-              <h3 class="info-name">Ольга Репина</h3>
-              <p class="info-profession">Frontend Developer</p>
+              <h3 class="info-name">Ігор Дем'яненко</h3>
+              <p class="info-profession">Product Designer</p>
               <ul class="info-soc list">
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
@@ -186,7 +195,46 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
+                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="info-item">
+              <img
+                src="./images/imgS2-1.jpg"
+                alt="фотографія Ольга Рєпіна"
+                width="270"
+                class="info-img"
+              />
+              <h3 class="info-name">Ольга Рєпіна</h3>
+              <p class="info-profession">Frontend Developer</p>
+              <ul class="info-soc list">
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
                         href="./images/log-icon-svg.svg#icon-icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="info-soc-item">
+                  <a href="" class="info-soc-link link">
+                    <svg class="info-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/log-icon-svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -214,27 +262,27 @@
             <li class="info-item">
               <img
                 src="./images/imgS3-1.jpg"
-                alt="фотография Николай Тарасов"
+                alt="фотографія Микола Тарасов"
                 width="270"
                 class="info-img"
               />
-              <h3 class="info-name">Николай Тарасов</h3>
+              <h3 class="info-name">Микола Тарасов</h3>
               <p class="info-profession">Marketing</p>
               <ul class="info-soc list">
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/symbol-defs.svg#icon-icon-facebook"
+                        href="./images/log-icon-svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
                 </li>
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20px" height="20px">
+                    <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                        href="./images/log-icon-svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -262,18 +310,18 @@
             <li class="info-item">
               <img
                 src="./images/imgS4-1.jpg"
-                alt="фотография Михаил Ермаков"
+                alt="фотографія Михайло Єрмаков"
                 width="270"
                 class="info-img"
               />
-              <h3 class="info-name">Михаил Ермаков</h3>
+              <h3 class="info-name">Михайло Єрмаков</h3>
               <p class="info-profession">UI Designer</p>
               <ul class="info-soc list">
                 <li class="info-soc-item">
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                        href="./images/log-icon-svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -282,7 +330,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                        href="./images/log-icon-svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -306,56 +354,6 @@
                   </a>
                 </li>
               </ul>
-            </li>
-            <li class="info-item">
-              <img
-                src="./images/imgS1-1.jpg"
-                alt="фотография Игорь Демьяненко"
-                width="270"
-                class="info-img"
-              />
-              <h3 class="info-name">Игорь Демьяненко</h3>
-              <p class="info-profession">Product Designer</p>
-              <ul class="info-soc list">
-                <li class="info-soc-item">
-                  <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/log-icon-svg.svg#icon-icon-twitter"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="info-soc-item">
-                  <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="info-soc-item">
-                  <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/log-icon-svg.svg#icon-icon-facebook"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="info-soc-item">
-                  <a href="" class="info-soc-link link">
-                    <svg class="info-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </li>
-          </ul>
         </div>
       </section>
     </main>
