--- a/index.html
+++ b/index.html
@@ -356,6 +356,31 @@
               </ul>
         </div>
       </section>
+      <section class="clients">
+        <div class="container">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item"><svg class="clients-log">
+              <use href="./images/log-icon-svg.svg#icon-logo-yaco"></use>
+            </svg></li>
+            <li class="clients-item"><svg class="clients-log">
+              <use href="./images/log-icon-svg.svg#icon-logo-taglin-here"></use>
+            </svg></li>
+            <li class="clients-item"><svg class="clients-log">
+              <use href="./images/log-icon-svg.svg#icon-logo-company"></use>
+            </svg></li>
+            <li class="clients-item"><svg class="clients-log">
+              <use href="./images/log-icon-svg.svg#icon-logo-foster-peters"></use>
+            </svg></li>
+            <li class="clients-item"><svg class="clients-log">
+              <use href="./images/log-icon-svg.svg#icon-logo-brand"></use>
+            </svg></li>
+            <li class="clients-item"><svg class="clients-log">
+              <use href="./images/log-icon-svg.svg#icon-logo-tig-line"></use>
+            </svg></li>
+          </ul>
+          </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
