--- a/index.html
+++ b/index.html
@@ -360,22 +360,22 @@
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
-            <li class="clients-item"><svg class="clients-log">
+            <li class="clients-item"><svg class="clients-log" width="170" height="92">
               <use href="./images/log-icon-svg.svg#icon-logo-yaco"></use>
             </svg></li>
-            <li class="clients-item"><svg class="clients-log">
+            <li class="clients-item"><svg class="clients-log" width="170" height="92">
               <use href="./images/log-icon-svg.svg#icon-logo-taglin-here"></use>
             </svg></li>
-            <li class="clients-item"><svg class="clients-log">
+            <li class="clients-item"><svg class="clients-log"width="170" height="92">
               <use href="./images/log-icon-svg.svg#icon-logo-company"></use>
             </svg></li>
-            <li class="clients-item"><svg class="clients-log">
+            <li class="clients-item"><svg class="clients-log"width="170" height="92">
               <use href="./images/log-icon-svg.svg#icon-logo-foster-peters"></use>
             </svg></li>
-            <li class="clients-item"><svg class="clients-log">
+            <li class="clients-item"><svg class="clients-log"width="170" height="92">
               <use href="./images/log-icon-svg.svg#icon-logo-brand"></use>
             </svg></li>
-            <li class="clients-item"><svg class="clients-log">
+            <li class="clients-item"><svg class="clients-log"width="170" height="92">
               <use href="./images/log-icon-svg.svg#icon-logo-tig-line"></use>
             </svg></li>
           </ul>
