--- a/index.html
+++ b/index.html
@@ -90,39 +90,35 @@
     <main>
       <section class="slogan">
         <div class="container">
-          <h1 class="slogan-text">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="slogan-btn">Заказать услугу</button>
+          <h1 class="slogan-text">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="slogan-btn">Замовити послугу</button>
         </div>
       </section>
       <section class="features">
         <div class="container">
           <ul class="features-list list">
             <li class="features-item">
-              <h3 class="features-title">Внимание к деталям</h3>
+              <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="features-item">
-              <h3 class="features-title">Пунктуальность</h3>
+              <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="features-item">
-              <h3 class="features-title">Планирование</h3>
+              <h3 class="features-title">Планування</h3>
               <p class="features-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
-              <h3 class="features-title">Современные технологии</h3>
+              <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
@@ -130,7 +126,7 @@
       </section>
       <section class="promo">
         <div class="container">
-          <h2 class="promo-title">Чем мы занимаемся</h2>
+          <h2 class="promo-title">Чим ми займаємося</h2>
           <ul class="promo-list list">
             <li class="promo-item">
               <img
