--- a/index.html
+++ b/index.html
@@ -356,24 +356,24 @@
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
-            <li class="clients-item"><svg class="clients-log" width="170" height="92">
+            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log" width="170" height="92">
               <use href="./images/icons.svg.svg#icon-logo-yaco"></use>
-            </svg></li>
-            <li class="clients-item"><svg class="clients-log" width="170" height="92">
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log" width="170" height="92">
               <use href="./images/icons.svg.svg#icon-logo-taglin-here"></use>
-            </svg></li>
-            <li class="clients-item"><svg class="clients-log"width="170" height="92">
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
               <use href="./images/icons.svg.svg#icon-logo-company"></use>
-            </svg></li>
-            <li class="clients-item"><svg class="clients-log"width="170" height="92">
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
               <use href="./images/icons.svg.svg#icon-logo-foster-peters"></use>
-            </svg></li>
-            <li class="clients-item"><svg class="clients-log"width="170" height="92">
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
               <use href="./images/icons.svg.svg#icon-logo-brand"></use>
-            </svg></li>
-            <li class="clients-item"><svg class="clients-log"width="170" height="92">
-              <use href="./images/icons.svg#icon-logo-tig-line"></use>
-            </svg></li>
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
+              <use href="./images/icons.svg.svg#icon-logo-tig-line"></use>
+            </svg></a></li>
           </ul>
           </div>
       </section>
