--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                   <a href="" class="footer-soc-link link">
                     <svg class="footer-soc-icon" width="20" height="20">
                       <use
-                        href="./images/icons.svg#icon-icon-instagram"
+                        href="./images/icons.svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
