--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/icons.svg#icon-icon-instagram"
+                        href="./images/icons.svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -375,7 +375,7 @@
               <use href="./images/icons.svg.svg#icon-logo-tig-line"></use>
             </svg></a></li>
           </ul>
-          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
