--- a/portfolio.html
+++ b/portfolio.html
@@ -262,7 +262,7 @@
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
                 <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-icon-instagram"></use>
+                  <use href="./images/icons.svg.svg#icon-icon-instagram"></use>
                 </svg>
               </a>
             </li>
