Add icon in features

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -98,26 +98,41 @@
         <div class="container">
           <ul class="features-list list">
             <li class="features-item">
+              <svg class="feature-icon" width="70" height="70">
+                <use href="./images/icons.svg.svg#icon-antenna"></use>
+              </svg>
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
+
             <li class="features-item">
+              <svg class="feature-icon" width="70" height="70">
+                <use href="./images/icons.svg.svg#icon-clock"></use>
+              </svg>
               <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
+
             <li class="features-item">
+              <svg class="feature-icon" width="70" height="70">
+                <use href="./images/icons.svg.svg#icon-diagram"></use>
+              </svg>
               <h3 class="features-title">Планування</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
+
             <li class="features-item">
+              <svg class="feature-icon" width="70" height="70">
+                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
