--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
               href="mailto:info@devstudio.com"
               class="heade-link-communication link"
             >
-              info@devstudio.com
+              <svg class="heade-icon" width="16" height="12"> <use href="./images/icons.svg.svg#icon-mail"></svg>info@devstudio.com
             </a>
           </li>
           <li class="heade-item">
             <a href="tel:+380961111111" class="heade-link-communication link"
-              >+38 096 111 11 11</a
+              > <svg class="heade-icon" width="10" height="16"> <use href="./images/icons.svg.svg#icon-tel"></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
