--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -93,7 +93,7 @@
           <h2 class="visually-hidden">Меню работ</h2>
           <ul class="filter-list list">
             <li class="filter-item">
-              <button type="button" class="filter-btn">Все</button>
+              <button type="button" class="filter-btn">Усі</button>
             </li>
             <li class="filter-item">
               <button type="button" class="filter-btn">Веб-сайти</button>
