--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="container">
           <ul class="features-list list">
             <li class="features-item">
-              <svg class="feature-icon" width="64" height="70">
+              <svg class="feature-icon" width="50" height="50">
                 <use href="./images/icons.svg.svg#icon-antenna"></use>
               </svg>
               <h3 class="features-title">Увага до деталей</h3>
@@ -377,48 +377,44 @@
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
             <li class="clients-item">
-              <a href="" class="clients-link"
-                ><svg class="clients-log" width="170" height="92">
-                  <use href="./images/icons.svg.svg#icon-logo-yaco"></use></svg
-              ></a>
+              <a href="" class="clients-link">
+                <svg class="clients-log" width="170" height="92">
+                  <use href="./images/icons.svg.svg#icon-logo-yaco"></use></svg></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                  <svg class="clients-log" width="170" height="92">
+                  <use
+                    href="./images/icons.svg.svg#icon-logo-taglin-here"></use>
+                  </svg>
+                </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-log" width="170" height="92">
+                  <use
+                    href="./images/icons.svg.svg#icon-logo-company"></use></svg></a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link"
                 ><svg class="clients-log" width="170" height="92">
                   <use
-                    href="./images/icons.svg.svg#icon-logo-taglin-here"
-                  ></use></svg
-              ></a>
+                    href="./images/icons.svg.svg#icon-logo-foster-peters"></use></svg></a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link"
-                ><svg class="clients-log" width="170" height="92">
+              <a href="" class="clients-link"> 
+                <svg class="clients-log" width="170" height="92">
+                  <use href="./images/icons.svg.svg#icon-logo-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-log" width="170" height="92">
                   <use
-                    href="./images/icons.svg.svg#icon-logo-company"
-                  ></use></svg
-              ></a>
-            </li>
-            <li class="clients-item">
-              <a href="" class="clients-link"
-                ><svg class="clients-log" width="170" height="92">
-                  <use
-                    href="./images/icons.svg.svg#icon-logo-foster-peters"
-                  ></use></svg
-              ></a>
-            </li>
-            <li class="clients-item">
-              <a href="" class="clients-link"
-                ><svg class="clients-log" width="170" height="92">
-                  <use href="./images/icons.svg.svg#icon-logo-brand"></use></svg
-              ></a>
-            </li>
-            <li class="clients-item">
-              <a href="" class="clients-link"
-                ><svg class="clients-log" width="170" height="92">
-                  <use
-                    href="./images/icons.svg.svg#icon-logo-tig-line"
-                  ></use></svg
-              ></a>
+                    href="./images/icons.svg.svg#icon-logo-tig-line"></use>
+                </svg>
+                </a>
             </li>
           </ul>
         </div>
