--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div class="container">
           <ul class="features-list list">
             <li class="features-item">
-              <div>
-              <svg class="feature-icon" width="50" height="50">
+              <div class="feature-icon">
+              <svg class="feature-icon-svg" width="50" height="50">
                 <use href="./images/icons.svg.svg#icon-antenna"></use>
               </svg>
               </div>
@@ -111,8 +111,8 @@
             </li>
 
             <li class="features-item">
-              <div>
-              <svg class="feature-icon" width="66" height="70">
+              <div class="feature-icon">
+              <svg class="feature-icon-svg" width="66" height="70">
                 <use href="./images/icons.svg.svg#icon-clock"></use>
               </svg>
               </div>
@@ -124,9 +124,11 @@
             </li>
 
             <li class="features-item">
-              <svg class="feature-icon" width="70" height="54">
+              <div class="feature-icon">
+              <svg class="feature-icon-svg"   width="70" height="54">
                 <use href="./images/icons.svg.svg#icon-diagram"></use>
               </svg>
+              </div>
               <h3 class="features-title">Планування</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
@@ -134,9 +136,11 @@
             </li>
 
             <li class="features-item">
-              <svg class="feature-icon" width="70" height="70">
+              <div class="feature-icon" >
+              <svg class="feature-icon-svg" width="70" height="70">
                 <use href="./images/icons.svg.svg#icon-astronaut"></use>
               </svg>
+              </div>
               <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
