--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       <div class="container footer-container">
         <div class="footer-left-part">
           <a
-            href="https://i.imgur.com/SfubzdW.png"
+            href="./index.html"
             lang="en"
             class="footer-log link"
             ><span>Web</span>Studio</a
